--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     <link rel="stylesheet" href="css/mobile-style.css" />
     <link rel="stylesheet" href="css/particles.css" />
     <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/cardcss.css" />
+    <link rel="stylesheet" href="css/card.scss" />
+
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+<script src="less.js" type="text/javascript" defer></script>
 
     <!--google fonts-->
     <link
@@ -62,6 +67,9 @@
     />
   </head>
   <body>
+    <div class="nigga">
+      Magic Card
+    </div>
     <!-- Header -->
     <header id="hero-section" class="section hero-section">
       <div id="particles-js" class="particles">
@@ -169,6 +177,7 @@
         </div>
       </div>
       <div class="cards">
+        
         <div class="card card-clock">
           <i class="far fa-clock animated bounceIn delay-2s"></i>
           <h3>18hrs</h3>
@@ -189,7 +198,13 @@
     </section>
 
     <section id="themes-section" class="section themes-section">
+
       <h1 class="animated flip delay-2s">Themes_</h1>
+      <div class="nigga">
+        Magic Card
+      </div>
+
+      
       <div class="theme-cards">
         <div class="theme-card card-clock">
           <i class="fas fa-cubes animated bounceIn delay-2s"></i>
