--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="css/cardcss.css" />
     <link rel="stylesheet" href="css/card.scss" />
     <link rel="stylesheet" href="css/ThemeCards.css" />
+    <link rel="stylesheet" href="css/timeline.css" />
 
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
 <script src="less.js" type="text/javascript" defer></script>
@@ -256,7 +257,76 @@
       <div class="event-schedule">
         <h1 class="animated flip delay-2s">Event Schedule_</h1>
       </div>
-      <div></div>
+      <div class="waao">
+        <!-- <h2>CSS3 Timeline</h2> -->
+          <ul id='timeline'>
+            <li class='work'>
+              <input class='radio' id='work5' name='works' type='radio' checked>
+              <div class="relative">
+                <label for='work5'>Lorem ipsum dolor sit amet</label>
+                <span class='date'>12 May 2013</span>
+                <span class='circle'></span>
+              </div>
+              <div class='content'>
+                <p>
+                  hello yatin!!
+                </p>
+              </div>
+            </li>
+            <li class='work'>
+              <input class='radio' id='work4' name='works' type='radio'>
+              <div class="relative">
+                <label for='work4'>Lorem ipsum dolor sit amet</label>
+                <span class='date'>11 May 2013</span>
+                <span class='circle'></span>
+              </div>
+              <div class='content'>
+                <p>
+                  hello yatin!!
+               </p>
+              </div>
+            </li>
+            <li class='work'>
+              <input class='radio' id='work3' name='works' type='radio'>
+              <div class="relative">
+                <label for='work3'>Lorem ipsum dolor sit amet</label>
+                <span class='date'>10 May 2013</span>
+                <span class='circle'></span>
+              </div>
+              <div class='content'>
+                <p>
+                  hello yatin!!
+                </p>
+              </div>
+            </li>
+            <li class='work'>
+              <input class='radio' id='work2' name='works' type='radio'>
+              <div class="relative">
+                <label for='work2'>Lorem ipsum dolor sit amet</label>
+                <span class='date'>09 May 2013</span>
+                <span class='circle'></span>
+              </div>
+              <div class='content'>
+                <p>
+                  hello yatin!!
+                </p>
+              </div>
+            </li>
+            <li class='work'>
+              <input class='radio' id='work1' name='works' type='radio'>
+              <div class="relative">
+                <label for='work1'>Lorem ipsum dolor sit amet</label>
+                <span class='date'>08 May 2013</span>
+                <span class='circle'></span>
+              </div>
+              <div class='content'>
+                <p>
+                  hello yatin!!
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
 
     </section>
 
